# LedBadge

./: .gitignore  README.md
LedBadgeQt/: CMakeCache.txt  CMakeLists.txt  LedBadgeQt  badge.h  cmake_install.cmake  framerate.h  image.cpp  image.h  log.cpp  log.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  queue.h  serial.cpp  serial.h  webcam.cpp  webcam.h
LedBadgeQt/LedBadgeQt_autogen/: deps
LedBadgeQt/LedBadgeQt_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
